--- a/src/main/resources/static/cards.html
+++ b/src/main/resources/static/cards.html
@@ -24,9 +24,10 @@
         display: flex;
         background-color: #fff3e0;
         border-radius: 10px;
+        border: 1px solid #ddd; /* 卡片邊框 */
         padding: 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        align-items: center;
+        align-items: flex-start;
       }
 
       .card img {
@@ -55,7 +56,12 @@
 
       .category {
         margin-bottom: 1;
-        color: green;
+        color: crimson;
+      }
+
+      .summary {
+        line-height: 1.6;
+        margin-top: 10px;
       }
 
       h1 {
@@ -100,11 +106,17 @@
             link.target = "_blank"; // 新窗口打開
             link.textContent = item.標題; // 使用 "標題" 欄位
 
+            const summary = document.createElement("div");
+            summary.className = "summary";
+            summary.textContent = item.新聞片段 || "無片段";
+
+            // 按照正確順序附加元素
             content.appendChild(category);
             content.appendChild(link);
+            content.appendChild(summary); // 確保 summary 附加到 content 中
             card.appendChild(img);
             card.appendChild(content);
-            cardContainer.appendChild(card);
+            cardContainer.appendChild(card); // 將整個 card 添加到容器中
           });
         })
         .catch((error) => console.error("Error fetching data:", error));
