更新csv直接讀取

--- a/src/main/resources/static/cards.html
+++ b/src/main/resources/static/cards.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <h1>新聞推播</h1>
-    <div id="loading" style="display: none; text-align: center; padding: 20px">
+    <div id="loading" style="display: flex">
+      <div class="spinner"></div>
       <span>請等待，資料加載中...</span>
     </div>
+    <div id="card-container"></div>
     <div class="card-container" id="card-container">
       <!-- 動態插入 -->
     </div>
