分類按鈕完成

--- a/src/main/resources/static/cards.html
+++ b/src/main/resources/static/cards.html
@@ -7,7 +7,33 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <h1>新聞推播</h1>
+    <h1>新聞資料庫</h1>
+    <div class="button-container">
+      <button data-category="">全部新聞</button>
+      <button data-category="台塑">台塑</button>
+      <button data-category="儲能">儲能</button>
+      <button data-category="電動大巴">電動大巴</button>
+      <button data-category="電池回收">電池回收</button>
+      <button data-category="寧德時代">寧德時代</button>
+      <button data-category="比亞迪">比亞迪</button>
+      <button data-category="新能源">新能源</button>
+      <button data-category="固態電池">固態電池</button>
+      <button data-category="電池中國">電池中國</button>
+      <button data-category="國軒高科">國軒高科</button>
+      <button data-category="華為">華為</button>
+      <button data-category="碳權">碳權</button>
+      <button data-category="碳費">碳費</button>
+      <button data-category="氫能">氫能</button>
+      <button data-category="綠電">綠電</button>
+      <button data-category="台泥">台泥</button>
+      <button data-category="特斯拉">特斯拉</button>
+      <button data-category="豐田">豐田</button>
+      <button data-category="鴻海">鴻海</button>
+      <button data-category="台達電">台達電</button>
+      <button data-category="carbon credit">carbon credit</button>
+      <button data-category="carbon tax">carbon tax</button>
+      <button data-category="carbon fee">carbon fee</button>
+    </div>
     <div id="loading" style="display: flex">
       <div class="spinner"></div>
       <span>請等待，資料加載中...</span>
