--- a/src/main/resources/static/cards.html
+++ b/src/main/resources/static/cards.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <h1>新聞資料庫</h1>
+    <h1>輿情系統 一週新聞</h1>
     <div class="button-container">
       <button data-category="">全部新聞</button>
       <button data-category="台塑">台塑</button>
